objects/LLC_BI__Review__c.object
<CustomObject>
    <description>The Review object is used to track details of the review process for the relationships/ loans in nCino.</description>
    <fields>
        <fullName>CF_Additional_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Approved_Date__c</fullName>
        <description>This field has been used on Review Layouts.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Auto_Approval_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Approval Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Auto_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Collateral_Discussion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Location, Date of Last Physical Inspection, Liquidation Value &amp; Bank&apos;s Cushion or Shortfall</inlineHelpText>
        <label>Collateral Discussion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field has been used on review layout.</description>
        <label>Credit Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviews4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field has been used on review layout.</description>
        <label>Credit Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviews5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Current_User_Assigned_As__c</fullName>
        <description>Used to populate the logged in user role</description>
        <formula>IF( $User.Id = cm_Loan_Officer__c ,&apos;Relationship Manager&apos;,
IF( $User.Id = CF_Loan_Assistant__c ,&apos;Loan Assistant&apos;,
IF( $User.Id = CF_Credit_Analyst__c ,&apos;Credit Analyst&apos;,
IF( $User.Id = CF_Credit_Officer__c ,&apos;Credit Officer&apos;,
&apos;NA&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Assigned As</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Defenses_Bankruptcy_Challenges__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Defenses &amp; Bankruptcy Challenges</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Financial_Analysis__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Financial_Position__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Trends around Leverage, Liquidity, Sales, Profitability, Margin, Etc.</inlineHelpText>
        <label>Financial Position</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Guarantor_s_Financial_Analysis__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guarantor(s) Financial Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Impaired_Loans_Est_Worst_Case_Loss__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impaired Loans - Est Worst Case Loss</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field has been used on Review Layout</description>
        <label>Loan Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviews3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Material_Changes_Since_Last_Report__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Changes in Debt Level, Income, Expenses, Collateral, Repayment Ability &amp; Mgmt</inlineHelpText>
        <label>Material Changes Since Last Report</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Override_Auto_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Credit for Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Primary_Action_Plan_for_Liquidation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Include Anticipated Completion Dates</inlineHelpText>
        <label>Primary Action Plan for Liquidation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Reasons_for_Financial_Difficulties__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reasons for Financial Difficulties</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field has been used on Review UI.</description>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Repayment_Ability__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Repayment Ability</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Review_Completion_Date__c</fullName>
        <description>This field has been used on review in related list of account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Risk_Grade__c</fullName>
        <label>Risk Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Risk_Rating_Review_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag gets checked when a risk rating review record is created on the review</description>
        <label>Risk Rating Review Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Secondary_Action_Plan_for_Liquidation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Include Anticipated Completion Dates</inlineHelpText>
        <label>Secondary Action Plan for Liquidation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Watch_List_Action_Plan_Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Summary of Watch Review discussion</inlineHelpText>
        <label>Watch List Action Plan Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Watch_List_Status__c</fullName>
        <label>Watch List Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis In Progress</fullName>
                    <default>true</default>
                    <label>Analysis In Progress</label>
                </value>
                <value>
                    <fullName>Ready for Watch List Review</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is available on the Account review record page. This is a Lookup that is automatically populated to the Account that the review was started from. It links the review record to the account. This is NOT available or needed on the Product Package review record page, because that review could be more multiple relationships and loans associated to the Product Package</description>
        <inlineHelpText>Lookup to the Account that is involved in the review.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Key__c</fullName>
        <description>An identifier of the unique context that created the Review. Most often this ties back to a Credit Action request from a Relationship</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Context Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is used to look up the credit memo record that is associated to the review record. If a credit memo is configured for reviews, this field is automatically populated once a credit memo is generated.</description>
        <label>Credit Memo</label>
        <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lookup_Key__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Narrative__c</fullName>
        <description>This rich text field is optional and manually populated. It is used for the financial institution user to specify details and additional information about the review.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package_Data__c</fullName>
        <description>This field is not customer facing and lives behind the scenes. It stores the JSON serialized sObject of the product package or the account in review.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Package Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used only on the product package review record layout. And will be used only when the Financial Institution is initiating reviews from the Product Package. This field is a lookup to the product package the review record was initiated from and automatically populated.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Review_Type__c</fullName>
        <description>The picklist Is manually selected and optional. It  is used to specify the type of the Review being performed.(i.e. annual, monthly, adhoc, early warning, etc.) Configuration options would allow a financial institution to require this field and then write workflow or approval processes using the input from this field.</description>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>AdHoc</fullName>
                </value>
                <value>
                    <fullName>Watch List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is automatically populated and  is used to specify the status of the review. The review status field will be populated with &quot;in progress&quot; when a review record is initiated. Through configuration of approval processes, the review will be automatically placed as complete when an approval process is complete and approved. Or, this field can be manually updated to complete if there is no configuration to automate the status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loan Officer of Review record. Added for the Commercial Accelerate project.</description>
        <label>Loan Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LV_My_Reviews_Credit_Analyst</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Review_Type__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>CF_Risk_Grade__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_Current_User_Assigned_As__c</field>
            <operation>equals</operation>
            <value>Credit Analyst</value>
        </filters>
        <label>My Reviews - Credit Analyst</label>
    </listViews>
    <listViews>
        <fullName>LV_My_Reviews_Credit_Officer</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Review_Type__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>CF_Risk_Grade__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_Current_User_Assigned_As__c</field>
            <operation>equals</operation>
            <value>Credit Officer</value>
        </filters>
        <label>My Reviews - Credit Officer</label>
    </listViews>
    <listViews>
        <fullName>LV_My_Reviews_Loan_Assistant</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Review_Type__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>CF_Risk_Grade__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_Current_User_Assigned_As__c</field>
            <operation>equals</operation>
            <value>Loan Assistant</value>
        </filters>
        <label>My Reviews - Loan Assistant</label>
    </listViews>
    <listViews>
        <fullName>LV_My_Reviews_Relationship_Manager</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Review_Type__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>CF_Risk_Grade__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_Current_User_Assigned_As__c</field>
            <operation>equals</operation>
            <value>Relationship Manager</value>
        </filters>
        <label>My Reviews - Relationship Manager</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0}</displayFormat>
        <label>Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__Account_Review_Complete</fullName>
        <active>true</active>
        <description>Account Review Complete</description>
        <label>Account Review Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Account_Review_In_Progress</fullName>
        <active>true</active>
        <description>Account Review In Progress</description>
        <label>Account Review In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Package_Review_Complete</fullName>
        <active>true</active>
        <description>Package Review Complete</description>
        <label>Package Review Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Package_Review_In_Progress</fullName>
        <active>true</active>
        <description>Package Review In Progress</description>
        <label>Package Review In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>REV_Watch_List_In_Progress</fullName>
        <active>true</active>
        <description>When Review Type is WatchList and Status is not approved</description>
        <label>Watch List In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>REV_Watch_List_Review_Complete</fullName>
        <active>true</active>
        <description>When Review Type is Watch List and Status is Approved</description>
        <label>Watch List Review Complete</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>